style.css
*{
    margin: 0;
    padding: 0;
}

.container {
    width: 1152px;
    margin: auto;
}

.menu {
    font-size: 20px;
    display: flex;
    justify-content:flex-end;
}

ul {
    margin-top: 20px;
}

ul li{
    display: inline;
    margin-right: 35px;
    margin-top: 35px;
}

/* MULAI HERO */

.hero {
    display: flex;
    justify-content: space-around;
    margin-top: 100px;
}

.hero-text h1, .hero-text h4 {
    margin-bottom: 20px;
}

.hero-text{
    width: 500px;
}

.hero-text h1 {
    font-size: 44px;
    font-weight: bold;
    line-height: 60px;
}

.hero-text h4 {
    font-size: 16px;
    font-weight: 300;
}

.hero-text button {
    font-size: 20px;
    color: #FFFFFF;
    background-color: #FF6464;
    padding: 10px 15px;
    border: none;
    border-radius: 10px;
}

/* POST */

.post {
    background-color: #EDF7FA;
    display: flex;
    flex-direction: column;
    padding: 30px 70px;
    margin-top: 100px;
}

.post-head {
    display: flex;
    justify-content: space-between;
}

.post-head h3, .fitur h3 {
    font-size: 22px;
    font-weight: 500;
    line-height: 60px;
}

.post-head a {
    text-decoration: none;
    color: #00A8CC;
    font-size: 16px;
}

.post-body {
    display: flex;
    gap: 20px;
}

.post-body-detail {
    background-color: #FFFFFF;
    padding: 20px 25px;
    border-radius: 10px;
}

.post-body-detail h2 {
    font-size: 26px;
    font-weight: 500;
    margin-bottom: 20px;
}

.post-body-info, .post-body-detail p {
    font-size: 16px;
    margin-bottom: 10px;
    line-height: 32px;
}

/* FITUR */
.fitur {
    padding: 30px 70px;
    margin-top: 20px; 
}

.fitur-detail {
    display: flex;
    gap: 15px;
    margin-bottom: 30px;
    padding-bottom: 30px;
    border-bottom: 1px solid #E0E0E0;
}

.fitur-detail h2 {
    font-size: 30px;
    line-height: 60px;
    font-weight: bold;
    margin-bottom: 20px;
}

.fitur-detail label:first-of-type {
    background-color: #142850;
    color: #FFFFFF;
    font-size: 18px;
    font-weight: 600;
    padding: 5px 10px;
    border-radius: 10px;
    margin-right: 15px;
}

.fitur-detail label {
    color: #8695A4;
    font-size: 20px;
}

.fitur-detail p {
    margin-top: 30px;
    font-size: 16px;
    color: #21243D;
}

/* FOOTER */

.footer {
    display: flex;
    justify-content:center;
}

.social-media-icon {
    display: flex;
    gap: 30px;
    margin-bottom: 15px;
}

.copyright {
    text-align: center;
    font-size: 14px;
    color: #21243D;
    margin-bottom: 20px;
}

/* @media only screen and (max-width: 900px) and (min-width: 600px){
    .container {
        width: 100%;
        margin: auto;
    }
} */

@media only screen and (max-width: 600px){
    .container {
        width: 100%;
        margin: auto;
        padding: 0 10px;
    }

    .hero {
        display: flex;
        flex-direction: column-reverse;
        margin-top: 100px;
    }

    .hero-image {
        display: flex;
        justify-content: center;
    }

    .hero-text {
        text-align: center;
    }


    /* start post mobile */
    .post {
        padding: 15px 35px;
    }
    .post-body {
        display: flex;
        flex-direction: column;
    }

    .fitur-detail {
        display: flex;
        flex-direction: column;
    }

    .fitur-detail-image img {
        width: 100%;
    }

    .menu {
        justify-content: center;
    }
}

